Fixes News Post Link size on mobile screens

--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -155,7 +155,7 @@
   }  
 
   .postPreview .postLink {
-    font-size: 2.5vh;
+    font-size: 4.25vmin;
     margin-bottom: 5vh;
   } 
 
